Fix tweet icon display on small screen and add new screenshots

--- a/public/sass/nav.scss
+++ b/public/sass/nav.scss
@@ -45,8 +45,12 @@ nav {
   nav {
     flex-direction: column;
 
+    div {
+      flex-direction: row;
+    }
+
     .fas {
-      display: none;
+      margin-left: 2rem;
     }
 
     span {
